ajustes, e add js

--- a/index.html
+++ b/index.html
@@ -6,24 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.cdnfonts.com/css/co-headline" rel="stylesheet">
-    <link rel="stylesheet" href="src/css/reset.css"> 
-    <link rel="stylesheet" href="src/css/animacoes.css">  
-    <link rel="stylesheet" href="src/css/variaveis.css"> 
+    <link rel="stylesheet" href="src/css/reset.css">
+    <link rel="stylesheet" href="src/css/animacoes.css">
+    <link rel="stylesheet" href="src/css/variaveis.css">
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/responsivo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-    integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+        integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Hogwarts Legacy</title>
 </head>
 
 <body>
     <main>
         <div class="carrosel">
-            <img class="imagem ativa" src="src/imagens/hogwarts 1-1.webp " alt="Paisagem de longe hogwarts">
+            <img class="imagem ativa" src="src/imagens/hogwarts 1.webp" alt="Paisagem de longe hogwarts">
             <img class="imagem" src="src/imagens/hogwarts 2.jpg" alt="Dragão hogwarts">
             <img class="imagem" src="src/imagens/hogwarts 3.webp" alt=" Luta com ogro">
-            <img class="imagem" src="src/imagens/hogwarts 4.webp" alt="Voo na aguia hogwarts">
+            <img class="imagem" src="src/imagens/hogwarts 4.jpg" alt=" Luta com ogro">
             <img class="imagem" src="src/imagens/hogwarts 5.webp" alt="Paisagem hogwarts">
             <img class="imagem" src="src/imagens/hogwarts 6.webp" alt="Castelo de hogwarts">
         </div>
@@ -36,12 +36,11 @@
                     nos livros de Harry
                     Potter. Agora você pode assumir o controle da ação e criar sua própria aventura. Descubra a sensação
                     de viver em Hogwarts enquanto faz aliados, luta contra bruxos das trevas e, por fim, decide o
-                    destino do mundo bruxo.<strong> Seu legado é o que você faz dele</strong></p>
+                    destino do mundo bruxo.<u> Seu legado é o que você faz dele</u></p>
             </div>
 
-            <div class="btn-carrosel">
-                <button class="btn btn-selecionado"></button>
-                <button class="btn"></button>
+            <div class="botoes-carrosel">
+                <button class="btn selecionado"></button>
                 <button class="btn"></button>
                 <button class="btn"></button>
                 <button class="btn"></button>
@@ -54,17 +53,17 @@
         <aside class="menu-lateral">
             <ul>
                 <li><a href="#" target="_blank">
-                    <i class="fa-brands fa-github"></i>
+                        <i class="fa-brands fa-github"></i>
                 <li>
                     <a href="#" target="_blank">
                         <i class="fa-brands fa-linkedin"></i>
                     </a>
                 </li>
             </ul>
-        </aside>        
+        </aside>
 
     </main>
-
+    <script src="src/js/index.js"></script>
 </body>
 
 </html>
