add redes sociais e readme

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
 
         <aside class="menu-lateral">
             <ul>
-                <li><a href="#" target="_blank">
+                <li><a href="https://github.com/ClariCassia" target="_blank">
                         <i class="fa-brands fa-github"></i>
                 <li>
-                    <a href="#" target="_blank">
+                    <a href="https://www.linkedin.com/in/clarissa-c%C3%A1ssia-6b8547242/" target="_blank">
                         <i class="fa-brands fa-linkedin"></i>
                     </a>
                 </li>
