Adicionado strong na descrição

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     nos livros de Harry
                     Potter. Agora você pode assumir o controle da ação e criar sua própria aventura. Descubra a sensação
                     de viver em Hogwarts enquanto faz aliados, luta contra bruxos das trevas e, por fim, decide o
-                    destino do mundo bruxo.<u> Seu legado é o que você faz dele</u></p>
+                    destino do mundo bruxo.<strong> Seu legado é o que você faz dele</strong></p>
             </div>
 
             <div class="botoes-carrosel">
